--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+      <h1>Welcome to My Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
+      </nav>
     </header>
-    
+
     <main>
-        <p>This is my personal website where I showcase my work.</p>
+      <p>This is my personal website where I showcase my work.</p>
     </main>
-</body>
+  </body>
 </html>
