--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Awesome Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
       <h1>Welcome to My Portfolio</h1>
       <nav>
@@ -20,6 +20,10 @@
 
     <main>
       <p>This is my personal website where I showcase my work.</p>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a student learning web development and Git!</p>
+      </section>
     </main>
   </body>
 </html>
